--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -129,7 +129,7 @@ Como se mencionó anteriormente se tienen dos problemas principales, uno es la c
 Una alternativa para solucionar ambos problemas es usar un protocolo de {\it cifrado convergente}, donde la llave de cifrado se deriva del texto en claro, es decir, si dos usuarios poseen el mismo archivo, podr\'an obtener la misma llave de cifrado. Posteriormente se utiliza un cifrador por bloques para ocultar la informaci\'on. Aunque este mecanismo es mejor que el descrito previamente, solamente es seguro si el espacio de mensajes es muy grande, es decir, si un mensaje es {\it impredecible}. Por el contrario, si el espacio de mensajes es peque\~no, entonces un posible atacante puede probar con todos los posibles mensajes, determinar si ya est\'a almacenado en la nube y descubrir la 
 informaci\'on para un usuario espec\'ifico. 
 
-Bellare, Keelveedhi y Ristenpart, propusieron un protocolo denominado DupLESS~\cite{Bellare}, el cual ofrece una soluci\'on para el escenario descrito anteriomente, es decir, cuando el espacio de mensajes es pequ\~no. Este protocolo combina varias herramientas criptográficas de tal forma que se pueda tener un control de las llaves relacionadas con los archivos y los usuarios sin comprometer el contenido e integridad de la información, de esta manera si dos usuarios quieren cifrar el mismo archivo obtendrán la misma llave. Por consiguiente, al cifrar los archivos obtendríamos como resultado el mismo archivo cifrado, esta vez al hacer la comparación se detectará la duplicación de archivos y únicamente se guardará una copia del archivo, ahorrando espacio de memoria y costos de infraestructura. \\
+Bellare, Keelveedhi y Ristenpart, propusieron un protocolo denominado DupLESS~\cite{dupless}, el cual ofrece una soluci\'on para el escenario descrito anteriomente, es decir, cuando el espacio de mensajes es pequ\~no. Este protocolo combina varias herramientas criptográficas de tal forma que se pueda tener un control de las llaves relacionadas con los archivos y los usuarios sin comprometer el contenido e integridad de la información, de esta manera si dos usuarios quieren cifrar el mismo archivo obtendrán la misma llave. Por consiguiente, al cifrar los archivos obtendríamos como resultado el mismo archivo cifrado, esta vez al hacer la comparación se detectará la duplicación de archivos y únicamente se guardará una copia del archivo, ahorrando espacio de memoria y costos de infraestructura. \\
 
 En el presente trabajo terminal, se implementar\'a el protocolo DupLESS, para garantizar la confidencialidad de la informaci\'on y detectar duplicados en la nube, considerando un 
 espacio de mensajes peque\~no. 
