--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -9,7 +9,7 @@
 
 @article{Nubecomp,
   author    = {Francisco Ceballos},
-  title     = {Cloud Computing, detonador de competitividad },
+  title     = {Cómputo Nube, detonador de competitividad },
   journal   = {Forbes},
   year      = {2013},
   url       = {https://www.forbes.com.mx/cloud-computing-detonador-de-competitividad/},
@@ -23,12 +23,7 @@
   url       = {http://imco.org.mx/wp-content/uploads/2012/06/Computo_en_la_nube-competitividad.pdf},
 }
 
-@misc{Bellare,
-   author = {Bellare, Keelveedhi, Ristenpart},
-   title = "Dupless: Server-aided encryption for deduplicated storage.",
-   year = "2013:429",
-   publisher = {IACR Cryptology ePrint Archive},
- }
+
 
 @misc{cisco,
    author = {EFE/Cisco},
@@ -39,7 +34,7 @@
 
  @book{Keelveedhi,
   author    = {Bellare, Keelveedhi, Ristenpart.},
-  title     = {Message-locked encryption and secure deduplication.},
+  title     = {Cifrado por bloqueo de Mensajes y eliminación segura de duplicados},
   publisher = {EUROCRYPT},
   volume    = {7881},
   pages     = {296–312},
@@ -76,21 +71,21 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
    title = "Data Deduplication Overview",
    year = "2015",
     howpublished = {Biblioteca TechNet},
-   note = {\url{https://technet.microsoft.com/enus/library/hh831602(v=ws.11).aspx}}
+   note = {Disponible en: \url{ https://technet.microsoft.com/enus/library/hh831602(v=ws.11).aspx}}
  }
 
 @misc{fundamentos,
    author = {López Barrientos Jaquelina},
-   title = "Fundamentos de Criptografía.",
+   title = {$"Fundamentos de Criptografía."$},
    year = "2012",
     howpublished = {Universidad Nacional Autónoma de México},
-   note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/11-concepto-decriptografia}}
+   note = {Disponible en: \url{ http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/11-concepto-decriptografia}}
  }
 
 @misc{abs,
    author = {Cooley J., Taylor C. y  Peacock A.},
-   title = "ABS: the apportioned backup system.",
-   year = "2004",
+   title = "ABS: El sistema de respaldo asignado.",
+   year = "2004. Disponible",
     howpublished = { MIT Laboratory for Computer}
  }
 
@@ -111,7 +106,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
  @book{tahoe,
   author    = {Wilcox-O´Hearn Z., Hopwood D. y Wilcox N.},
-  title     = {Tahoe: The least-authority},
+  title     = {Tahoe: La última autoridad},
   publisher = {In Proceedings of the 4th ACM},
   pages     = {21-26},
   year      = {2008}
@@ -119,33 +114,33 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @book{donceur,
    author = {Donceur J. R. and Adya A. and Bolosky W. J. and Simon D. and Theimer M.},
-   title = {Reclaiming space from duplicate files in a serverless distributed file system.},
+   title = {Recuperación de espacio de archivos duplicados en un sistema de archivos distribuido sin servidor.},
     publisher = {ICDCS},
     pages = {617-624},
    year = {2002}
  }
 
 @misc{sime,
-    author = {s/a},
+    author = {S/A},
     title = {Cifrado simetrico},
-    howpublished = {Guía de Gnu Privacy Guard},
+    howpublished = {\textit{Guía de Gnu Privacy Guard}},
     year = {2015},
-    note = {\url{https://www.gnupg.org/gph/es/manual/c190.html#AEN201}}
+    note = {Disponible en: \url{https://www.gnupg.org/gph/es/manual/c190.html#AEN201}}
 }
 @misc{cripto,
    author = {Erika Aguillón Martínez y M.C. Ma. Jaquelina López Barrientos},
-   title = "Fundamentos de Criptografía.",
+   title = {$"Fundamentos de Criptografía."$},
    year = "2012",
     howpublished = {Universidad Nacional Autónoma de México},
-   note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/11-concepto-de-criptografia}}
+   note = {Disponible en:\url{ http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/11-concepto-de-criptografia}}
  }
 
 @misc{ventajasime,
    author = {Dante Iván González Sánchez},
-   title = "SEGURIDAD EN REDES Y CRIPTOGRAFÍA",
+   title = {$"Seguridad en redes y criptografía"$},
    year = "2004",
     howpublished = {Instituto Tecnológico y de Estudios Superiores de Monterrey, Campus Monterrey},
-   note = {\url{https://repositorio.itesm.mx/ortec/handle/11285/571244}}
+   note = {Disponible en: \url{ https://repositorio.itesm.mx/ortec/handle/11285/571244}}
  }
 
 @book{menezes,
@@ -161,7 +156,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @book{paar,
   author    = {Christof Paar and Jan Pelzl},
-  title     = {Understanding Cryptography - {A} Textbook for Students and Practitioners},
+  title     = {Entender la Criptografía - {A} Libro de texto para estudiantes y practicantes},
   publisher = {Springer},
   year      = {2010},
   url       = {http://dx.doi.org/10.1007/978-3-642-04101-3},
@@ -174,7 +169,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @book{stinson,
   author    = {Douglas R. Stinson},
-  title     = {Cryptography - theory and practice},
+  title     = {Criptografía, Teoría y Práctica},
   series    = {Discrete mathematics and its applications series},
   publisher = {{CRC} Press},
   year      = {1995},
@@ -186,15 +181,15 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @misc{servicios,
    author = {Erika Aguillón Martínez y M.C. Ma. Jaquelina López Barrientos},
-   title = "Fundamentos de Criptografía.",
+   title = {$"Fundamentos de Criptografía."$},
    year = "2012",
     howpublished = {Universidad Nacional Autónoma de México},
-   note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/13-servicios-y-mecanismos-de-seguridad/131-servicios-de-seguridad}}
+   note = {Disponible en:\url{ http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/13-servicios-y-mecanismos-de-seguridad/131-servicios-de-seguridad}}
  }
 
 @book{sommerville,
   author    = {Ian Sommerville},
-  title     = {Software Engineering, 6. Auflage},
+  title     = {Ingeniería de Software, 6. Auflage},
   publisher = {Pearson Studium},
   year      = {2001},
   isbn      = {978-3-8273-7001-3},
@@ -205,18 +200,18 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @misc{norepudio,
    author = {López López Erika},
-   title = "Fundamentos de Seguridad Informática.",
+   title = {$Fundamentos de Seguridad Informática.$},
    year = "2012",
     howpublished = {Universidad Nacional Autónoma de México},
-   note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/seguridad/ServNoRepudio.php}}
+   note = {Disponible en: \url{http://redyseguridad.fi-p.unam.mx/proyectos/seguridad/ServNoRepudio.php}}
  }
 
 @misc{ataques,
    author = {Erika Aguillón Martínez y M.C. Ma. Jaquelina López Barrientos},
-   title = "Fundamentos de Seguridad Informática.",
+   title = {$"Fundamentos de Seguridad Informática."$},
    year = "2012",
     howpublished = {Universidad Nacional Autónoma de México},
-   note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/14-ataques/142-ataques-a-los-metodos-de-cifrado}}
+   note = {Disponible en: \url{ http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/14-ataques/142-ataques-a-los-metodos-de-cifrado}}
  }
 
 @article{bloques,
@@ -228,9 +223,9 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 }
 
 @misc{rsa,
-   author = {s/a},
+   author = {S/A},
    title = "RSA",
-    howpublished = {Herramientas WEB para la enseñanza de Protocolos de Comunicación},
+    howpublished = {\textit{Herramientas WEB para la enseñanza de Protocolos de Comunicación}},
    note = {\url{http://neo.lcc.uma.es/evirtual/cdd/tutorial/presentacion/rsa.html}}
  }
 
@@ -243,7 +238,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @book{modes,
  author = {Stallings, William},
- title = {Cryptography and Network Security: Principles and Practice},
+ title = {Criptografía y Seguridad en la red: Principios y Práctica},
  year = {2002},
  isbn = {0130914290},
  edition = {5a},
@@ -272,7 +267,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
   author    = {Mihir Bellare and
                Sriram Keelveedhi and
                Thomas Ristenpart},
-  title     = {DupLESS: Server-Aided Encryption for Deduplicated Storage},
+  title     = {DupLESS: Cifrado Asistido por Servidor para Almacenamiento sin Duplicados},
   journal   = {{IACR} Cryptology ePrint Archive},
   volume    = {2013},
   pages     = {429},
@@ -359,10 +354,10 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @misc{at,
     author = {Erika Aguillón Martínez y M.C. Ma. Jaquelina López Barrientos},
-    title = {Fundamentos de Critofrafía},
+    title = {$Fundamentos de Critografía$},
     howpublished = {Universidad Nacional Autonoma de México Facultad de Ingenieria},
     year = {2015},
-    note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/}}
+    note = {Disponible en: \url{ http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/}}
 }
 
 
