--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -104,7 +104,7 @@ Sin embargo, en este escenario es f\'acil detectar los duplicados. Como se obser
 
 Otro punto importante, es la seguridad e integridad de la gran cantidad de información que se almacena en la nube. Cuando un usuario almacena un archivo en la nube, est\'a cediendo su informaci\'on de manera voluntaria a un tercero, que podr\'ia hacer mal uso de la misma. Éste tema se está volviendo cada vez más preocupante sobre todo para instituciones o empresas cuya información puede ser sensible. Para proteger a los archivos que se almacenan en la nube, es posible utilizar mecanismos criptogr\'aficos. La criptografía, es una ciencia que se encarga de ocultar información de tal forma que solamente aquellos usuarios autorizados puedan acceder a ella. \\
 
-Encontrar una soluci\'on para ambos problemas, es decir, evitar la duplicaci\'on y tener confidencialidad de la informaci\'on en la nube, no es trivial. Por un lado, si se tiene la información en claro es relativamente fácil poder detectar que dos archivos son los mismos, ya que solo se compara bit a bit, pero si estos mismos archivos cada usuario cifra su archivo el resultado serian dos archivos diferentes por esto es que no es posible detectar archivos duplicados con este método. 
+Encontrar una soluci\'on para ambos problemas, es decir, evitar la duplicaci\'on y tener confidencialidad de la informaci\'on en la nube, no es trivial. Por un lado, si se tiene la información en claro es relativamente fácil poder detectar que dos archivos son los mismos, ya que solo se compara bit a bit, pero si estos mismos archivos cada usuario cifra su archivo el resultado serían dos archivos diferentes por esto es que no es posible detectar archivos duplicados con este método. 
 
 %Este servicio de almacenamiento está sujeto a los ataques de adversarios que están interesados en el robo, manipulación o alteración de la información. Uno de los ataques que se han intentado realizar por dichos adversarios es el ataque por fuerza bruta, el cual es una forma de recuperar una clave probando todas las combinaciones posibles hasta encontrar aquella que permite el acceso al archivo. \\
 
@@ -129,7 +129,7 @@ Como se mencionó anteriormente se tienen dos problemas principales, uno es la c
 Una alternativa para solucionar ambos problemas es usar un protocolo de {\it cifrado convergente}, donde la llave de cifrado se deriva del texto en claro, es decir, si dos usuarios poseen el mismo archivo, podr\'an obtener la misma llave de cifrado. Posteriormente se utiliza un cifrador por bloques para ocultar la informaci\'on. Aunque este mecanismo es mejor que el descrito previamente, solamente es seguro si el espacio de mensajes es muy grande, es decir, si un mensaje es {\it impredecible}. Por el contrario, si el espacio de mensajes es peque\~no, entonces un posible atacante puede probar con todos los posibles mensajes, determinar si ya est\'a almacenado en la nube y descubrir la 
 informaci\'on para un usuario espec\'ifico. 
 
-Bellare, Keelveedhi y Ristenpart, propusieron un protocolo denominado DupLESS~\cite{dupless}, el cual ofrece una soluci\'on para el escenario descrito anteriomente, es decir, cuando el espacio de mensajes es pequ\~no. Este protocolo combina varias herramientas criptográficas de tal forma que se pueda tener un control de las llaves relacionadas con los archivos y los usuarios sin comprometer el contenido e integridad de la información, de esta manera si dos usuarios quieren cifrar el mismo archivo obtendrán la misma llave. Por consiguiente, al cifrar los archivos obtendríamos como resultado el mismo archivo cifrado, esta vez al hacer la comparación se detectará la duplicación de archivos y únicamente se guardará una copia del archivo, ahorrando espacio de memoria y costos de infraestructura. \\
+Bellare, Keelveedhi y Ristenpart, propusieron un protocolo denominado DupLESS~\cite{dupless}, el cual ofrece una soluci\'on para el escenario descrito anteriomente, es decir, cuando el espacio de mensajes es peque\~no. Este protocolo combina varias herramientas criptográficas de tal forma que se pueda tener un control de las llaves relacionadas con los archivos y los usuarios sin comprometer el contenido e integridad de la información, de esta manera si dos usuarios quieren cifrar el mismo archivo obtendrán la misma llave. Por consiguiente, al cifrar los archivos obtendríamos como resultado el mismo archivo cifrado, esta vez al hacer la comparación se detectará la duplicación de archivos y únicamente se guardará una copia del archivo, ahorrando espacio de memoria y costos de infraestructura. \\
 
 En el presente trabajo terminal, se implementar\'a el protocolo DupLESS, para garantizar la confidencialidad de la informaci\'on y detectar duplicados en la nube, considerando un 
 espacio de mensajes peque\~no. 
@@ -171,7 +171,7 @@ Desarrollar un protocolo criptográfico para evitar la duplicación de archivos 
 \end{itemize}
 
 \section{Organización del documento. }
-El resto del presente documento detalla el proceso de implementaci\'on del protocolo criptogr\'afico DedupLESS y est\'a conformado como se describe a continuaci\'on
+El resto del presente documento detalla el proceso de implementaci\'on del protocolo criptogr\'afico DupLESS y est\'a conformado como se describe a continuaci\'on
 \begin{itemize}
 % \item Capítulo 1 \textbf{Introducción} \\
 % En este capítulo se expone cuál es el contexto en el que este trabajo terminal se desarrollará, así mismo se describe cuál ha sido la problemática detectada a partir del análisis del contexto en el cuál se desarrolla la investigación y finalmente se muestran cuáles son los objetivos tanto general como específicos de este trabajo terminal, es decir, cuál es la finalidad de éste protocolo criptográfico. 
@@ -179,10 +179,10 @@ El resto del presente documento detalla el proceso de implementaci\'on del proto
 El contenido de este capítulo abordará temas estrechamente relacionados con la criptografía y la seguridad de la información. También, este capítulo contiene información acerca de los 2 tipos de criptografía que existen mencionando los diferentes esquemas de cifrado y los modos de operación que son utilizados por algunos de estos. De igual forma se describe con detalle los servicios que ofrece el cómputo nube. 
 
 \item Capítulo 3 \textbf{Protocolos criptográficos para evitar duplicados} \\
-Este cap\'itulo muestra una comparativa entre los distintos protocolos criptogr\'aficos que garantizan confidencialidad y la detecci\'on de duplicados. También el capítulo contiene la explicación del protocolo criptográfico Dupless, el cuál provee de toda la investigación y posteriormente el desarrollo de este trabajo terminal.
+Este cap\'itulo muestra una comparativa entre los distintos protocolos criptogr\'aficos que garantizan confidencialidad y la detecci\'on de duplicados. También el capítulo contiene la explicación del protocolo criptográfico DupLESS, el cuál provee de toda la investigación y posteriormente el desarrollo de este trabajo terminal.
 
 \item Capítulo 4 \textbf{Análisis} \\
-Aqu\'i se describe el análisis del protocolo criptográfico, el cual se compone de la realización de un estudio de factibilidad y análisis de riesgos para la realización de este proyecto, asimismo se muestra cuál será la arquitectura de trabajo terminal, la descripción de todos los procesos que involucran la creación de este protocolo, el modelo de entidades que comprende diagrama entidad relación y el diagrama de clases para su implementación. Al final de este capítulo se podrán encontrar los requerimientos de este protocolo criptográfico tanto funcionales como no funcionales y las reglas de negocio que lo componen.
+Aqu\'i se describe el análisis del protocolo criptográfico, el cual se compone de la realización de un estudio de factibilidad y análisis de riesgos para la realización de este proyecto, asimismo se muestra cuál será la arquitectura del trabajo terminal, la descripción de todos los procesos que involucran la creación de este protocolo, el modelo de entidades que comprende diagrama entidad relación y el diagrama de clases para su implementación. Al final de este capítulo se podrán encontrar los requerimientos de este protocolo criptográfico tanto funcionales como no funcionales y las reglas de negocio que lo componen.
 
 \item Capítulo 5 \textbf{Diseño} \\
 El capítulo de diseño tiene como contenido la especificación de la plataforma del protocolo, es decir, la especificación de recursos necesarios para poder llevar a cabo su implementación con las herramientas necesarias, y también todos los casos de usos que involucran el funcionamiento de dicho protocolo.
